--- a/frontend/my-portfolio/package.json
+++ b/frontend/my-portfolio/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.6",
+    "styled-components": "^5.3.3"
   }
 }
